--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## Kotlin
 # Compiled class file
 *.class
 
@@ -30,3 +31,33 @@ replay_pid*
 
 # Ignore Gradle build output directory
 build
+
+
+## Mac OS
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
